styles/charts/_theme.scss
@import '../base/states';
@import '../popup/theme';
@import './layout';

$chart-inactive: $disabled-border-color !default;
$chart-major-lines: darken($base, 30%) !default;
$chart-minor-lines: darken($base, 20%) !default;

$chart-font-size-s: 11px !default;
$chart-font-size-m: 12px !default;
$chart-font-size-l: 16px !default;

$chart-area-opacity: .8 !default;

$chart-crosshair-shared-tooltip-color: $normal-text-color !default;
$chart-crosshair-shared-tooltip-background: $base !default;
$chart-crosshair-shared-tooltip-border: rgba(0, 0, 0, .08) !default;

@include exports('charts/theme') {
    // Exported variables
    .k-var--chart-font-s {
        font-size: $chart-font-size-s;
    }

    .k-var--chart-font-m {
        font-size: $chart-font-size-m;
    }

    .k-var--chart-font-l {
        font-size: $chart-font-size-l;
    }

    .k-var--chart-inactive {
        background-color: $chart-inactive;
    }

    .k-var--chart-major-lines {
        background-color: $chart-major-lines;
    }

    .k-var--chart-minor-lines {
        background-color: $chart-minor-lines;
    }

    .k-var--chart-area-opacity {
        opacity: $chart-area-opacity;
    }

    // Elements
    .k-chart,
    .k-sparkline,
    .k-stockchart {
        background-color: transparent;
    }

    .k-chart-tooltip {
        color: $background;
        border-radius: $border-radius;
    }

    .k-chart-tooltip-inverse {
        color: invert($background);
    }

    .k-chart-crosshair-tooltip,
    .k-chart-shared-tooltip {
        color: $chart-crosshair-shared-tooltip-color;
        background-color: $chart-crosshair-shared-tooltip-background;
        border-color: $chart-crosshair-shared-tooltip-border;
    }

    .k-selection {
        border-bottom: 0;
        border-width: 1px;
        border-style: solid;
        border-color: $disabled-border-color;
    }

    .k-selection-bg {
        background-color: $background;
    }

    .k-handle {
        background: $disabled-border-color;
        cursor: e-resize;
    }

    .k-handle div {
        background-color: transparent;
    }

    .k-mask {
        background-color: $background;
        filter: alpha(opacity=80);
        opacity: .8;
    }

    .k-border {
        background: $disabled-border-color;
    }

    // Navigator hint
    .k-navigator-hint .k-scroll {
        border-radius: $border-radius;
        background: $disabled-border-color;
    }

    .k-navigator-hint .k-tooltip {
        border: 0;
        background: $background;
    }
}

